[HTML Layouts] create project-list.html(rename it into index.html for testing)

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,24 +1,27 @@
 @import "reset";
+/* @import "project-list.scss"; */
+@import "header";
+@import "tasks";
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	box-sizing: border-box;
-	opacity: .8;
-	border-radius: 5px;
-	h1 {
-		background: #00f;
-		&:hover {
-			background: #f0f;
-		}
-	}
-	p {
-		width: 400px;
-		height: 250px;
-		background: #ff0;
-		&:hover {
-			background: #0f0;
-		}
-	}
+	/* box-sizing: border-box;
+  opacity: .8;
+  border-radius: 5px;
+  h1 {
+    background: #00f;
+    &:hover {
+      background: #f0f;
+    }
+  }
+  p {
+    width: 400px;
+    height: 250px;
+    background: #ff0;
+    &:hover {
+      background: #0f0;
+    }
+  } */
 }
 
 /* .header {
