[BEM] - Fixed typo in mixin (use wrong font)

--- a/src/scss/core/_fonts.scss
+++ b/src/scss/core/_fonts.scss
@@ -23,19 +23,19 @@ $font-weight-bold: 700;
 }
 
 @mixin font-regular($size) {
-  font-family: EncodeSans, Helvetica, Arial, sans-serif;
+  font-family: EncodeSansWide, Helvetica, Arial, sans-serif;
   font-weight: $font-weight-regular;
   font-size: $size;
 }
 
 @mixin font-semi-bold($size) {
-  font-family: EncodeSans, Helvetica, Arial, sans-serif;
+  font-family: EncodeSansWide, Helvetica, Arial, sans-serif;
   font-weight: $font-weight-semi-bold;
   font-size: $size;
 }
 
 @mixin font-bold($size) {
-  font-family: EncodeSans, Helvetica, Arial, sans-serif;
+  font-family: EncodeSansWide, Helvetica, Arial, sans-serif;
   font-weight: $font-weight-bold;
   font-size: $size;
 }
