--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,8 @@
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 320px;
+  margin: 0 auto;
 	/* box-sizing: border-box;
   opacity: .8;
   border-radius: 5px;
