--- a/src/scss/core/blocks/header/header_colors.scss
+++ b/src/scss/core/blocks/header/header_colors.scss
@@ -1,12 +1,6 @@
 @each $color-name, $color in $colors {
-  .header_#{$color-name} {
+  .header.header_#{$color-name} {
+    color: $gray-scale-0;
     background-color: $color;
-    .button {
-      color: $gray-scale-0;
-      background-color: $color;
-      &:hover {
-        background-color: darken($color, 11%);
-      }
-    }
   }
 }
