--- a/src/scss/core/import.scss
+++ b/src/scss/core/import.scss
@@ -1,4 +1,6 @@
-@import "_util";
-@import "_fonts";
-@import "_branding";
+@import "util";
+@import "fonts";
+@import "branding";
+@import "icons";
+@include retina-sprites($retina-groups);
 @import "blocks/import";
