[BEM] - Fixed colors

--- a/src/scss/core/_branding.scss
+++ b/src/scss/core/_branding.scss
@@ -19,6 +19,6 @@ $colors: (
 $gray-scale-0: #FFF;
 $gray-scale-1: #F1F3F6;
 $gray-scale-2: #D3DBE3;
-$gray-scale-3: #B8C1C9;
+$gray-scale-3: #B9C1C9;
 $gray-scale-4: #ABB4BE;
-$gray-scale-5: #586269;
+$gray-scale-5: #57626B;
