--- a/src/scss/tasks.scss
+++ b/src/scss/tasks.scss
@@ -1,13 +1,10 @@
-
 .tasks {
 	&-task {
 		width: $width;
 		height: $height-tasks;
 		overflow: hidden;
 		list-style: none;
-		border-bottom: 1px solid #d3dbe4;
-
-		// display: table;
+		border-bottom: 1px solid $gray1;
 
 		&__checkbox {
 			line-height: $height-tasks;
@@ -27,28 +24,21 @@
 			width: 202px;
 			height: $height-tasks;
 
-			// margin-right: 12px;
 			float: left;
-			// position: relative;
 
 			display: table;
 
 			&-wrapper {
-				// position: absolute;
-				// top: 50%;
-				// transform: translateY(-50%);
-
 				display: table-cell;
 				vertical-align: middle;
-
 				&__name {
-					color: #58626a;
+					color: $gray4;
 					font-family: "EncodeSansWide_reg", Arial, sans-serif;
 					font-size: 15px;
 					line-height: 23px;
 				}
 				&__date {
-					color: #b9c1ca;
+					color: $gray3;
 					font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 					font-size: 9px;
 					line-height: 13px;
@@ -58,20 +48,18 @@
 					background: url(../img/ic_today.png) left top no-repeat transparent;
 				}
 				&-project {
-					
-
 					&__indicator {
 						display: inline-block;
 						width: 8px;
 						height: 8px;
 						border-radius: 8px;
-						background-color: #f00;
+						background-color: $gray3;
 						vertical-align: middle;
 					}
 					&__name {
 						display: inline-block;
 
-						color: #000;
+						color: $gray3;
 						font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 						font-size: 9px;
 						line-height: 13px;
@@ -94,7 +82,7 @@
 				vertical-align: middle;
 
 				&__alarm {
-					color: #b9c1ca;
+					color: $gray3;
 					font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 					font-size: 9px;
 
@@ -102,7 +90,7 @@
 					background: url(../img/ic_notifications_none.png) left center no-repeat;
 				}
 				&__measurement {
-					color: #b9c1ca;
+					color: $gray3;
 					font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 					font-size: 9px;
 
