[HTML Layouts] Align all elements

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,7 +16,7 @@ $project-color3: #3799d7;  // project work
 $project-color3-hover: #2980b9;  // project work-hover
 $project-color4: #f0c33c;  // project kids
 $project-color5: #e77a35;  // project study
-$project-color6: #9e54b2;  // project sport
+$project-color6: #9e54b2;  // project health
 
 @font-face {
   font-family: 'EncodeSansWide_reg';
