--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -37,6 +37,7 @@
       // vertical-align: middle;
 
       text-align: center;
+      text-transform: uppercase;
       line-height: $height-header;
       padding: 0 12px;
       float: left;
