--- a/src/scss/tasks.scss
+++ b/src/scss/tasks.scss
@@ -41,13 +41,15 @@
 					color: $gray3;
 					font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 					font-size: 9px;
-					line-height: 13px;
+					text-transform: uppercase;
+					line-height: 17px;
 
 					padding-left: 13px;
 					vertical-align: middle;
-					background: url(../img/ic_today.png) left top no-repeat transparent;
+					background: url(../img/ic_today.png) left center no-repeat transparent;
 				}
 				&-project {
+					line-height: 9px;
 					&__indicator {
 						display: inline-block;
 						width: 8px;
@@ -61,8 +63,9 @@
 
 						color: $gray3;
 						font-family: "EncodeSansWide_semibold", Arial, sans-serif;
+						text-transform: uppercase;
 						font-size: 9px;
-						line-height: 13px;
+						line-height: 17px;
 					}
 				}
 			}
@@ -85,6 +88,7 @@
 					color: $gray3;
 					font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 					font-size: 9px;
+					line-height: 17px;
 
 					padding-left: 12px;
 					background: url(../img/ic_notifications_none.png) left center no-repeat;
@@ -93,6 +97,7 @@
 					color: $gray3;
 					font-family: "EncodeSansWide_semibold", Arial, sans-serif;
 					font-size: 9px;
+					line-height: 17px;
 
 					padding-left: 12px;
 					background: url(../img/ic_access_time.png) left center no-repeat;
@@ -100,4 +105,13 @@
 			}
 		}
 	}
+}
+.project-1 {
+	background-color: $project-color1;
+}
+.project-2 {
+	background-color: $project-color2;
+}
+.project-6 {
+	background-color: $project-color6;
 }
