--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,7 +7,7 @@ $gray1: #d3dbe4;
 $gray2: #ced3da;
 $gray3: #b9c1ca;
 $gray4: #58626a;
-$gray5: #abb4be;
+$bg-tasks-header: #abb4be;
 $gray6: #d5d9de;
 
 $project-color1: #1abc9c;  // project education
