--- a/src/scss/tasks.scss
+++ b/src/scss/tasks.scss
@@ -1,4 +1,13 @@
 .tasks {
+	&__header {
+		text-align: center;
+		text-transform: uppercase;
+		font-size: 9px;
+		line-height: 22px;
+		font-family: "EncodeSansWide_semibold", Arial, sans-serif;
+		color: white;
+		background-color: $bg-tasks-header;
+	}
 	&-task {
 		width: $width;
 		height: $height-tasks;
@@ -114,4 +123,12 @@
 }
 .project-6 {
 	background-color: $project-color6;
+}
+.clearfix:after,
+.clearfix:before {
+	content: "";
+	display: block;
+	visibility: hidden;
+	clear: both;
+	height: 0;
 }
