--- a/src/scss/mobile/blocks/button/button.scss
+++ b/src/scss/mobile/blocks/button/button.scss
@@ -1,10 +1,10 @@
 .button {
-  @extend ._middle-content;
   display: block;
   text-align: center;
   height: 100%;
   outline: none;
   border: 0;
+  @include colorize-all($gray-scale-0, $gray-scale-1);
 }
 
-@import "button_colors";
+@include colors-state-all-for('.button');
